fix : permission 추가
- dependabot이 기본적으로 read 권한만 가지고 있어 이를 contents에 대해 쓰기 권한을 부여함

--- a/.github/workflows/push_if_merged.yaml
+++ b/.github/workflows/push_if_merged.yaml
@@ -8,6 +8,10 @@ jobs:
   if_merged:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: write
+
     steps:
       # feat 변경사항 dev로 이동
       - uses: actions/checkout@v4.2.2
