--- a/.github/workflows/push_if_merged.yaml
+++ b/.github/workflows/push_if_merged.yaml
@@ -27,7 +27,7 @@ jobs:
           git config --global user.email "github-actions@users.noreply.github.com"
           
           # remote url 변경
-          git config remote.origin.url "https://$TOKEN@github.com/$REPOSITORY.git"
+          git config remote.origin.url "https://x-access-token:$TOKEN@github.com/$REPOSITORY.git"
           
           # 실제 push 작업 수행
           git push origin feat:dev
