--- a/.github/workflows/push_if_merged.yaml
+++ b/.github/workflows/push_if_merged.yaml
@@ -1,8 +1,5 @@
 name: push feat to dev
 
-permissions:
-  contents: write
-
 on:
   pull_request:
     branches: [ feat ]
@@ -11,7 +8,6 @@ jobs:
   if_merged:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
-
     steps:
       # feat 변경사항 dev로 이동
       - uses: actions/checkout@v4.2.2
@@ -22,10 +18,14 @@ jobs:
           # 전역 설정 추가
           git config --global user.name "woory-actions"
           git config --global user.email "woory-actions@users.noreply.github.com"
-
+          
+          git remote set-url origin "https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/$REPOSITORY.git"
+          
           git checkout dev
           
-          git merge feat
+          git merge feat --no-edit
           
           # 실제 push 작업 수행
           git push origin dev
+        env:
+          REPOSITORY: SWYP-Woory/woory-backend
