fix : push_if_merged
- pull_request_author_association이 아닌 pull_request.author_assoication으로 수정

--- a/.github/workflows/push_if_merged.yaml
+++ b/.github/workflows/push_if_merged.yaml
@@ -12,7 +12,7 @@ jobs:
     steps:
       # PR 작성자가 org에 속해있는지 확인
       - name: Check access
-        if: ${{ github.event.pull_request_author_association != 'COLLABORATOR' && github.event.pull_request_author_association != 'OWNER' }}
+        if: ${{ github.event.pull_request.author_association != 'COLLABORATOR' && github.event.pull_request.author_association != 'OWNER' }}
         run: |
           echo "Event not triggered by a collaborator."
           exit 1
